[package]
name = "reth-sandbox"
version = "0.1.0"
edition = "2024"


[dependencies]

once_cell = "1"


reth-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth" }
reth-provider = { git = "https://github.com/paradigmxyz/reth" }
reth-revm = { git = "https://github.com/paradigmxyz/reth" }
reth-db = { git = "https://github.com/paradigmxyz/reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth" }

# Alloy
alloy-consensus = { version = "1.0.41", default-features = false }
alloy-primitives = { version = "1.4.1", default-features = false, features = ["rlp"] }
alloy-signer-local = { version = "1.0.41", default-features = false }
alloy-signer = { version = "1.0.41", default-features = false }
alloy-genesis = { version = "1.0.41", default-features = false }
alloy-rpc-types-eth = { version = "1.0.41", default-features = false }
alloy-network = { version = "1.0.41", default-features = false }
alloy-eips = { version = "1.0.41", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
alloy-sol-macro = { version = "1.0.41", default-features = false, features = ["json"] } 
alloy-sol-types = { version = "1.0.41", default-features = false }
alloy-contract = { version = "1.0.41", default-features = false }

# Crypto + utils
k256 = { version = "0.13", features = ["ecdsa"] }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"

serde_json = { version = "1.0" }
rayon = { version = "1.10" }

# You call async helpers (e.g., `transfer_tx(...).await`), so make main async:
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
